--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ body {
     bottom: -2vw;
     left: 1.6vw;
     right: 1.6vw;
-    background-color: rgba(0, 0, 0, 1);
+    background-color: rgba(0, 0, 0, 0.92);
     color: white;
     padding: 1vw;
     text-align: center;
@@ -49,6 +49,14 @@ body {
 }
 
 @media (max-width: 768px) {
+    .title h1 {
+        font-size: 6vw;
+    }
+
+    .title h2 {
+        font-size: 2.7vw;
+    }
+
     .container {
         display: flex;
         flex-direction: column;
