--- a/Catalogo Videojuegos/style.css
+++ b/Catalogo Videojuegos/style.css
@@ -62,6 +62,15 @@ body {
     transition: box-shadow 0.5s;
   }
   
+  .icon-house {
+    width: 40px;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    cursor: pointer;
+  }
+  
+
   .alura-latam-logo {
     width: 40px;
     position: absolute;
