--- a/Conversor monedas/style.css
+++ b/Conversor monedas/style.css
@@ -28,6 +28,14 @@ body {
     width: 250px;
   }
   
+  .icon-house {
+    width: 40px;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    cursor: pointer;
+  }
+
   .alura-latam-logo {
     width: 40px;
     position: absolute;
