--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
 body {
-    background-color: blue;
+    background-color: white;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("https://caelum-online-public.s3.amazonaws.com/assets-imersaodev/background_mentalista.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
 }
 
 .title h1 {
@@ -9,11 +14,13 @@ body {
     margin-top: 6vw;
     font-family: 'Righteous';
 }
+
 .title h2 {
     font-size: 15px;
     color: white;
     text-align: center;
     margin: 3vw;
+    font-family: 'Quicksand', sans-serif;
 }
 
 .container {
@@ -29,6 +36,7 @@ body {
 }
 
 .projects img {
+    filter: brightness(0.7);
     border-radius: 20px;
     max-width: 90%;
     height: auto;
@@ -40,7 +48,7 @@ body {
     bottom: -2vw;
     left: 1.6vw;
     right: 1.6vw;
-    background-color: rgba(0, 0, 0, 0.92);
+    background-color: rgb(31, 31, 31);
     color: white;
     padding: 1vw;
     text-align: center;
