--- a/styles.css
+++ b/styles.css
@@ -48,12 +48,22 @@ body {
     bottom: -2vw;
     left: 1.6vw;
     right: 1.6vw;
-    background-color: rgb(31, 31, 31);
-    color: white;
-    padding: 1vw;
+    background-color: rgb(73, 77, 195);
+    color: rgb(255, 249, 249);
+    padding: 0.5vw;
     text-align: center;
     border-radius: 20px;
     cursor: pointer;
+}
+
+.info h3 {
+    font-family: 'Quicksand', sans-serif;
+}
+
+.info p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    text-align: left;
 }
 
 @media (max-width: 768px) {
@@ -62,7 +72,7 @@ body {
     }
 
     .title h2 {
-        font-size: 2.7vw;
+        font-size: 2.4vw;
     }
 
     .container {
@@ -81,13 +91,12 @@ body {
     }
 
     .info {
-        background-color: rgba(0, 0, 0, 0.92);
-        left: 2vw;
-        right: 2.2vw;
+        background-color: rgb(73, 77, 195);
+        left: 2.3vw;
+        right: 2.3vw;
         color: white;
         padding: 1vw;
         text-align: center;
-        border-radius: 20px;
         cursor: pointer;
     }
 }
