--- a/Mentalista/style.css
+++ b/Mentalista/style.css
@@ -48,6 +48,11 @@ body {
     margin: 0 10px;
   }
   
+  img:hover {
+    transform: scale(1.1);
+    filter: brightness(75%);
+  }
+
   img {
     max-height: 350px;
   }
